# wolf3d

./: .gitignore  CMakeLists.txt  Makefile
Includes/common/: bsp.h  camera.h  common.h  common_defines.h  common_typedefs.h  intersections.h  math_3d.h  matrix_math.h  rasterization.h  return_codes.h  t_vec3d_math.h
Includes/level_editor/: level_editor.h  level_editor_defines.h  level_editor_typedefs.h
Includes/wolf3d/: return_codes.h  wolf3d.h  wolf3d_defines.h
Srcs/common/: change_fov.c  draw_line.c  draw_point.c  draw_polygon.c  get_screen_pixel_crd.c  keyboard.c  mouse.c  move_camera.c  print_sdl_error_and_return.c  read_map.c  read_map_surfaces.c  read_map_textures.c  read_xpm_colors.c  read_xpm_header.c  read_xpm_texture.c  recalculate_texture_part.c  render_scene.c  rotate_camera.c  save_map.c  t_vec3d_into_arr.c  throw_current_image_on_screen.c
Srcs/common/BSP/: build_bsp_tree.c  check_new_nodes.c  clear_bsp_stack.c  clear_bsp_tree.c  divide_is_necessary.c  divide_node.c  divide_surface.c  divide_texture.c  free_bsp_tree.c  insert_into_tree.c  insert_surface_into_tree.c  proceed_bsp_node.c  proceed_node_surface.c
Srcs/common/Intersections/: hor_and_vert_surfaces_intersection.c  intersections_2d.c  line_plane_intersection.c  segment_quad_intersection.c  surface_surface_intersection.c
Srcs/common/Math/: camera_matrix_inverse.c  check_limits.c  get_rel_pos.c  gj_eliminate_element.c  gj_elimination_correct_diagonal.c  matrix_inverse.c  matrix_math.c  point_inside_quad.c  rotate.c  rotate_crd_system.c  rotate_crd_system_relatively_to_world.c  t_vec2d_into_t_vec3d.c  t_vec3d_math.c  t_vec3d_operations.c
Srcs/common/Rasterization/: add_new_occupied_segment.c  approximate_texturing_data_along_line.c  build_lines_from_vertexes.c  calculate_texturing_data.c  draw_texture.c  draw_texture_line.c  draw_texture_multithreaded.c  draw_texture_multithreaded_slave.c  draw_xpm_image.c  fill_texturing_table.c  get_border_min_and_max_y.c  get_left_and_right_borders.c  get_point_from_texture.c  get_texture_projection.c  get_vertex_projections.c  get_vertexes.c  init_texture_crd.c  list_of_occupied.c  perspective_divide.c  project_out_of_sight_side.c  project_segment.c  render_scene.c  render_surface.c  render_texture.c
Srcs/common/Raycasting/: get_ray_color.c  render_scene_processor.c  renderer_slave.c
Srcs/level_editor/: change_tmp_surface.c  create_tmp_surface.c  init.c  is_setting.c  main.c  main_loop.c  move_tmp_surface.c  process_keydown_le.c  read_settings.c  rotate_tmp_surface.c  select_base_surface.c
Srcs/wolf3d/: init.c  main.c  main_loop.c
